# jquants-pairs-trading-python

./: .gitignore  LICENCE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
jquants_pairs_trading/: __init__.py  jquants_pairs_trading.py
tests/: 3382-2023-10-23.csv  4063-2023-10-23.csv  4502-2023-10-23.csv  performance.csv  test_jquants_pairs_trading.py
workflows/: python-publish.yml
